<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YueMa</string>
	<string name="setting">设置</string>
    <string name="title_section1">设置1</string>
    <string name="title_section2">设置2</string>
    <string name="title_section3">设置3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">action_example</string>
    <string name="action_settings">Settings</string>
    
    
    <!-- homepage Activity -->
     <string name="activity_title">首页</string>
     <string name="action_search">查找</string>
     <string name="activity_tab_home">首页</string>
     <string name="activity_tab_renmai">人脉</string>
     <string name="activity_tab_message">信息</string>
     <string name="activity_tab_me">我</string>
     <string name="activity_friends">圈子动态</string>
     <string name="activity_mine">我的动态</string>
   
     <!-- titile -->
     <string name="title_regist">注册</string>
     <string name="title_logon">登录</string>
     <string name="title_home">首页</string>
     <string name="title_relation">人脉</string>
     <string name="title_friends_msg">圈子动态</string>
     <string name="title_my_msg">我的动态</string>
     <string name="title_messgae">消息</string>
     <!-- processDialog -->
     <string name="message">登录中</string>
     
     <!--activity logon register activity  -->
     <string name="contentdescript">activity picture</string>
     <string name="logon_btn_text">登陆</string>
     <string name="register_btn_text">注册</string>
      
     <!-- activity register phone number -->
     <string name="phonehint">请输入大陆手机号码(13位)</string>
     <string name="phonedetial">手机号注册，更加有利于您的朋友和你联系哟</string>
     <string name="next_btn_text">下一步</string>
     <string name="aggrement">我同意《YueMa服务协议》</string>
     <!-- aggrement activity -->
    <string name="aggrementDetial">我同意《YueMa服务协议》</string>
     
     <!-- activity set pwd -->
     <string name="setpwd_information">请输入验证码，并设定密码和姓名</string>
     <string name="getcode">获取验证码</string>
     <string name="code">验证码</string>
     <string name="pwdhint">密码6&#045;20个字符</string>
     <string name="name">真实姓名</string>
     <string name="finish_text">完成</string>
     
     <!-- activity logon -->
     <string name="username">手机号</string>
     <string name="password">密码</string>
     <string name="logon">登陆</string>
     <string name="forget">忘记密码</string>
     <string name="new_user">新用户</string>
     
     <!-- homepage中下Tab的数组 -->
  	<string-array name="homepage_items">
		<item>首页</item>
		<item>人脉</item>
		<item>消息</item>
		<item>我</item>
	</string-array>
     
  	<!-- activity 活动界面 -->
  	<string name="title">活动标题</string>
  	<string name="introduce">活动详情介绍</string>
  	<string name="add_label">添加活动标签</string>
  	<string name="begin_time">开始时间</string>
  	<string name="end_time">结束时间</string>
  	<string name="max_count">最大人数</string>
  	<string name="per_cost">预期人均消费</string>
  	<string name="collection_address">集合地点</string>
  	<string name="activity_address">活动地点</string>
  	<string name="contact">联系方式</string>
  	
   	<!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string> 
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
</resources>
