<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittext"
        android:ems="13"
        android:hint="@string/title"
        android:inputType="numberDecimal"
        android:padding="10dip"
        android:singleLine="true"
        android:textColorHint="#AAAAAA"
        android:textSize="15sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText_introduce"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittext"
        android:ems="13"
        android:gravity="top"
        android:hint="@string/introduce"
        android:inputType="textMultiLine"
        android:padding="10dip"
        android:singleLine="true"
        android:text=""
        android:textColorHint="#AAAAAA"
        android:textSize="15sp" >

        <requestFocus />
    </EditText>

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add" />
    
    <Spinner   
        android:id="@+id/spinnerLabel"  
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittext" />  
  <EditText
        android:id="@+id/editText_beginTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittext"
        android:ems="13"
        android:hint="@string/begin_time"
        android:inputType="numberDecimal"
        android:padding="10dip"
        android:singleLine="true"
        android:textColorHint="#AAAAAA"
        android:textSize="15sp" >

        <requestFocus />
    </EditText>
    
  <EditText
        android:id="@+id/editText_endTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittext"
        android:ems="13"
        android:hint="@string/end_time"
        android:inputType="numberDecimal"
        android:padding="10dip"
        android:singleLine="true"
        android:textColorHint="#AAAAAA"
        android:textSize="15sp" >

        <requestFocus />
    </EditText>
    
</LinearLayout>